--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Luckiest+Guy&family=Gothic+A1:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Gothic+A1:wght@900&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Luckiest+Guy&family=Gothic+A1:wght@900&display=swap" rel="stylesheet"> -->
     <title>Vite App</title>
   </head>
   <body>
